// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/send-email/postmark SendEmail sends email with attachements 1`] = `
Ok {
  "value": Object {
    "messageId": "ae5cc358-4a8a-4d06-8355-9ea4e9b0578f",
  },
}
`;

exports[`communication/send-email/postmark SendEmail when all inputs are correct should return messageId as result 1`] = `
Ok {
  "value": Object {
    "messageId": "5ed221f7-e05a-4ec5-90ec-170d1f1184ee",
  },
}
`;

exports[`communication/send-email/postmark SendEmail when inputs are invalid should throw an exception 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Invalid inputs\\",
  \\"detail\\": \\"Error parsing 'To': Illegal email address 'invalidemail'. It must contain the '@' symbol.\\"
}
AST Path: definitions[0].statements[2].responseHandlers[1].statements[0]
Original Map Location: Line 38, column 7",
}
`;
